--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "build" : "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm build --prefix frontend"
+    "build" : "npm install && npm install  --prefix frontend && npm build --prefix frontend"
   },
   "author": "Prince Patel",
   "license": "ISC",
