--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mern",
     "chat-app"
   ],
-  "author": "Prince Patel",
+  "author": "Piyush Agarwal",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
+    "react-icons": "^5.2.0",
     "socket.io": "^4.1.2"
   }
 }
